test/configCases/errors/invalid-entry-type/errors.js
"use strict";

module.exports = [[/configuration\.entry/]];
